feat: /api/v1/strucvars/csq endpoint with OpenAPI (#607)
