# src/server/run/actix_server/mod.rs
@@ -62,6 +62,7 @@ pub async fn main(
             .service(gene_txs::handle_with_openapi)
             .service(seqvars_csq::handle)
             .service(strucvars_csq::handle)
+            .service(strucvars_csq::handle_with_openapi)
             .service(versions::handle)
             .service(
                 utoipa_swagger_ui::SwaggerUi::new("/swagger-ui/{_:.*}")
