# src/server/run/mod.rs
@@ -16,22 +16,36 @@ pub mod actix_server;
 
 /// Module with OpenAPI documentation.
 pub mod openapi {
+    use crate::annotate::strucvars::csq::interface::StrucvarsSvType;
+    use crate::annotate::strucvars::csq::{
+        StrucvarsGeneTranscriptEffects, StrucvarsTranscriptEffect,
+    };
+    use crate::common::GenomeRelease;
+    use crate::server::run::actix_server::strucvars_csq::{
+        StrucvarsCsqQuery, StrucvarsCsqResponse,
+    };
     use crate::server::run::actix_server::versions::{
         Assembly, DataVersionEntry, SoftwareVersions, VersionsInfoResponse,
     };
 
-    use super::actix_server::{versions, CustomError};
+    use super::actix_server::{strucvars_csq, versions, CustomError};
 
     /// Utoipa-based `OpenAPI` generation helper.
     #[derive(utoipa::OpenApi)]
     #[openapi(
-        paths(versions::handle),
+        paths(versions::handle, strucvars_csq::handle_with_openapi),
         components(schemas(
             Assembly,
             CustomError,
             VersionsInfoResponse,
             SoftwareVersions,
-            DataVersionEntry
+            DataVersionEntry,
+            StrucvarsCsqResponse,
+            StrucvarsCsqQuery,
+            StrucvarsGeneTranscriptEffects,
+            StrucvarsSvType,
+            GenomeRelease,
+            StrucvarsTranscriptEffect,
         ))
     )]
     pub struct ApiDoc;
